# gst-glespp

./: CMakeLists.txt  READ.ME  README.md  gst-gles++.kdev4
CMake/Modules/: FindLibXml2.cmake
include/: gst-gles++-video-sink.h
src/: gst-gles++-video-sink.cpp  gst-gles++.cpp
